logs/pub_sub2/build.make.019.log.stderr
In file included from /opt/ros/kinetic/include/ros/ros.h:40:0,
                 from /home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:3:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:34:28: error: ‘geometry_msgs::Twist {aka struct geometry_msgs::Twist_<std::allocator<void> >}’ has no member named ‘x’
       << " linear=" << msg.x
                            ^
/opt/ros/kinetic/include/ros/console.h:356:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/kinetic/include/ros/console.h:398:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/kinetic/include/ros/console.h:568:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:33:5: note: in expansion of macro ‘ROS_INFO_STREAM’
     ROS_INFO_STREAM("Sending random velocity command:"
     ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:35:29: error: ‘geometry_msgs::Twist {aka struct geometry_msgs::Twist_<std::allocator<void> >}’ has no member named ‘y’
       << " angular=" << msg.y);
                             ^
/opt/ros/kinetic/include/ros/console.h:356:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/kinetic/include/ros/console.h:398:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/kinetic/include/ros/console.h:568:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:33:5: note: in expansion of macro ‘ROS_INFO_STREAM’
     ROS_INFO_STREAM("Sending random velocity command:"
     ^
make[2]: *** [CMakeFiles/pubvel_smart.dir/src/pubvel_smart.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_smart.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
